--- a/Performance Measures AES_RSA_SHA-256.ipynb
+++ b/Performance Measures AES_RSA_SHA-256.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <center> ![alt text](sp-1.png)"
+    "# <center> ![alt text](lock.png)"
    ]
   },
   {
@@ -20,7 +20,7 @@
    "source": [
     "**In this assignment, we are going to measure the time that AES (symmetric encryption), RSA (asymmetric encryption), and SHA-256 (hashing) take to process files of different sizes, using a Python implementation for the encryption, decryption, and hashing mechanisms.**\n",
     "\n",
-    "**Let´s break down what each one of these mechanisms do:**\n",
+    "**Let's break down what each one of these mechanisms do:**\n",
     "\n",
     "**AES (symmetric encryption) - Symmetric encryption is a cryptographic method where the same key is used for both encryption and decryption of data.<br>**\n",
     "**RSA (asymmetric encryption) - Asymmetric encryption uses a pair of keys: a public key for encryption and a private key for decryption. The public key can be shared openly, while the private key must be kept secure.<br>**\n",
@@ -40,35 +40,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**In this first step we are going to install our dependecies to make our job possible.**"
+    "**In this first step we are going to install our dependencies to make our job possible.**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: cryptography in c:\\users\\pedro\\anaconda3\\lib\\site-packages (42.0.2)\n",
-      "Requirement already satisfied: matplotlib in c:\\users\\pedro\\anaconda3\\lib\\site-packages (3.8.0)\n",
-      "Requirement already satisfied: numpy in c:\\users\\pedro\\anaconda3\\lib\\site-packages (1.26.4)\n",
-      "Requirement already satisfied: cffi>=1.12 in c:\\users\\pedro\\anaconda3\\lib\\site-packages (from cryptography) (1.16.0)\n",
-      "Requirement already satisfied: contourpy>=1.0.1 in c:\\users\\pedro\\anaconda3\\lib\\site-packages (from matplotlib) (1.2.0)\n",
-      "Requirement already satisfied: cycler>=0.10 in c:\\users\\pedro\\anaconda3\\lib\\site-packages (from matplotlib) (0.11.0)\n",
-      "Requirement already satisfied: fonttools>=4.22.0 in c:\\users\\pedro\\anaconda3\\lib\\site-packages (from matplotlib) (4.25.0)\n",
-      "Requirement already satisfied: kiwisolver>=1.0.1 in c:\\users\\pedro\\anaconda3\\lib\\site-packages (from matplotlib) (1.4.4)\n",
-      "Requirement already satisfied: packaging>=20.0 in c:\\users\\pedro\\anaconda3\\lib\\site-packages (from matplotlib) (23.1)\n",
-      "Requirement already satisfied: pillow>=6.2.0 in c:\\users\\pedro\\anaconda3\\lib\\site-packages (from matplotlib) (10.2.0)\n",
-      "Requirement already satisfied: pyparsing>=2.3.1 in c:\\users\\pedro\\anaconda3\\lib\\site-packages (from matplotlib) (3.0.9)\n",
-      "Requirement already satisfied: python-dateutil>=2.7 in c:\\users\\pedro\\anaconda3\\lib\\site-packages (from matplotlib) (2.8.2)\n",
-      "Requirement already satisfied: pycparser in c:\\users\\pedro\\anaconda3\\lib\\site-packages (from cffi>=1.12->cryptography) (2.21)\n",
-      "Requirement already satisfied: six>=1.5 in c:\\users\\pedro\\anaconda3\\lib\\site-packages (from python-dateutil>=2.7->matplotlib) (1.16.0)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!pip install cryptography matplotlib numpy"
    ]
@@ -181,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +244,7 @@
     "    aes_decrypt_times[size] = dec_time\n",
     "    print(f\"AES Size {size:7d} bytes: encrypt = {enc_time:.6f} sec, decrypt = {dec_time:.6f} sec\")\n",
     "\n",
-    "# Stastics Summary\n",
+    "# Statistical Summary\n",
     "\n",
     "enc_times = list(aes_encrypt_times.values())\n",
     "dec_times = list(aes_decrypt_times.values())\n",
@@ -559,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -574,7 +553,7 @@
     }
    ],
    "source": [
-    "# Create the \"Encryption/Hashing Time Comparison\" to easier comparision\n",
+    "# Create the \"Encryption/Hashing Time Comparison\" to easier comparison\n",
     "\n",
     "plt.figure(figsize=(10, 6))\n",
     "\n",
@@ -600,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -615,7 +594,7 @@
     }
    ],
    "source": [
-    "# Create the \"Decryption Time Comparison\" to easier comparision\n",
+    "# Create the \"Decryption Time Comparison\" to easier comparison\n",
     "\n",
     "plt.figure(figsize=(10, 6))\n",
     "\n",
