--- a/Performance Measures AES_RSA_SHA-256.ipynb
+++ b/Performance Measures AES_RSA_SHA-256.ipynb
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -346,6 +346,8 @@
     "    m = int.from_bytes(data, byteorder='big')\n",
     "    c = pow(m, e, n)\n",
     "    return c\n",
+    "\n",
+    "# Note: This implies raw RSA (Textbook RSA) for benchmarking primitive speed. Production implementations must use padding (e.g., OAEP).\n",
     "\n",
     "def rsa_decrypt_raw(ciphertext, size):\n",
     "\n",
