--- a/Performance Measures AES_RSA_SHA-256.ipynb
+++ b/Performance Measures AES_RSA_SHA-256.ipynb
@@ -535,7 +535,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Now, for a better understand of the execution times, we will create a plot to compare the encryption and hashing times across different file sizes.**"
+    "**Now, for a better understanding of the execution times, we will create a plot to compare the encryption and hashing times across different file sizes.**"
    ]
   },
   {
