--- a/Performance Measures AES_RSA_SHA-256.ipynb
+++ b/Performance Measures AES_RSA_SHA-256.ipynb
@@ -155,7 +155,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**To start, we will focus on AES (Advanced Encryption Standard), implementing both encryption and decryption routines, and measuring their performance across different file sizes**"
+    "**To start, we will focus on AES (Advanced Encryption Standard), implementing both encryption and decryption routines, and measuring their performance across different file sizes.**"
    ]
   },
   {
@@ -262,7 +262,7 @@
     "print(f\"{'Max':<10} {max(enc_times):>15.6f} {max(dec_times):>15.6f}\")\n",
     "print(f\"{'Range':<10} {max(enc_times) - min(enc_times):>15.6f} {max(dec_times) - min(dec_times):>15.6f}\")\n",
     "\n",
-    "#Create the \"AES Encryption/Decryption Times\" Plot\n",
+    "# Create the \"AES Encryption/Decryption Times\" Plot\n",
     "\n",
     "aes_encrypt_us = convert_to_us(aes_encrypt_times)\n",
     "aes_decrypt_us = convert_to_us(aes_decrypt_times)\n",
@@ -291,7 +291,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Next, we are going to focus on RSA (Rivest–Shamir–Adleman), implementing both encryption and decryption routines, and measuring their performance across different file sizes**"
+    "**Next, we are going to focus on RSA (Rivest–Shamir–Adleman), implementing both encryption and decryption routines, and measuring their performance across different file sizes.**"
    ]
   },
   {
@@ -399,7 +399,7 @@
     "print(f\"{'Max':<10} {max(enc_times):>15.6f} {max(dec_times):>15.6f}\")\n",
     "print(f\"{'Range':<10} {max(enc_times) - min(enc_times):>15.6f} {max(dec_times) - min(dec_times):>15.6f}\")\n",
     "\n",
-    "#Create the \"RSA Encryption/Decryption Times\" Plot\n",
+    "# Create the \"RSA Encryption/Decryption Times\" Plot\n",
     "\n",
     "rsa_encrypt_us = convert_to_us(rsa_encrypt_times)\n",
     "rsa_decrypt_us = convert_to_us(rsa_decrypt_times)\n",
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -507,7 +507,7 @@
     "print(f\"{'Max':<10} {max(times):>15.6f}\")\n",
     "print(f\"{'Range':<10} {max(times) - min(times):>15.6f}\")\n",
     "\n",
-    "#Create the \"SHA-256 Hash Generation Times\" Plot\n",
+    "# Create the \"SHA-256 Hash Generation Times\" Plot\n",
     "\n",
     "sha_us = convert_to_us(sha_times)\n",
     "\n",
@@ -555,7 +555,7 @@
     }
    ],
    "source": [
-    "# Create the \"Encryption/Hashing Time Comparison\" to easier comparison\n",
+    "# Create the \"Encryption/Hashing Time Comparison\" for easier comparison\n",
     "\n",
     "plt.figure(figsize=(10, 6))\n",
     "\n",
@@ -596,7 +596,7 @@
     }
    ],
    "source": [
-    "# Create the \"Decryption Time Comparison\" to easier comparison\n",
+    "# Create the \"Decryption Time Comparison\" for easier comparison\n",
     "\n",
     "plt.figure(figsize=(10, 6))\n",
     "\n",
